# spin-fileserver

./: Cargo.toml  LICENSE  README.md  spin.toml
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
examples/javascript/: .gitignore  README.md  app.mjs  build.mjs  package-lock.json  package.json  spin.toml
examples/python/: .gitignore  README.md  app.py  spin.toml
examples/rust/: Cargo.toml  README.md  spin.toml
examples/rust-standalone/: Cargo.toml  README.md  spin.toml
examples/rust/src/: bindings.rs  lib.rs
examples/wit/: command-extended.wit  delegate.wit  main.wit  proxy.wit  test.wit
src/: bindings.rs  lib.rs
tests/: Cargo.toml
